--- a/DOM and Events Practice/css/styles.css
+++ b/DOM and Events Practice/css/styles.css
@@ -1,3 +1,9 @@
+body{
+  margin-left: 20px;
+}
+
+
+
 .backgroundChange {
   padding: 20px;
   display: flex;
@@ -24,4 +30,46 @@ ul li {
 }
 .red {
   background-color: #ff5151;
+}
+#submitButton{
+  cursor: pointer;
+}
+
+/*  Radio Button*/
+
+/*Button Increment Decrement*/
+.plus-minus{
+  margin-top: 50px;
+}
+
+.minus, .plus{
+  cursor: pointer;
+}
+input{
+  cursor: pointer;
+}
+
+/* Form Validation*/
+
+.form-valid{
+   margin: 50px 0;
+   
+}
+form{
+  display: flex;
+   flex-direction: column;
+   width: 30%;
+   border-color: #f6f6f6;
+   
+}
+input{
+  padding: 10px 2px;
+  margin-bottom: 20px; 
+  margin-top: 5px;
+}
+#submit-btn{
+  width: 30%;
+  margin: auto;
+  padding: 5px;
+  /* margin-top: 20px; */
 }
